# verovioxide

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE-MIT  Makefile  NOTICE  README.md  odm.toml
.github/workflows/: ci.yml  prebuilt.yml
crates/design/: Cargo.toml
crates/design/docs/: index.md
crates/design/docs/01-draft/: 0001-verovioxide-implementation-plan.md
crates/design/docs/05-active/: 0004-png-rendering-support.md
crates/design/docs/06-final/: 0001-verovioxide-implementation-plan.md  0002-unified-render-api-with-builder-pattern.md  0003-unified-query-api-with-trait-based-get-method.md
crates/design/src/: lib.rs
crates/verovioxide/: Cargo.toml
crates/verovioxide-data/: Cargo.toml  README.md
crates/verovioxide-data/src/: lib.rs
crates/verovioxide-sys/: Cargo.toml  README.md  build.rs
crates/verovioxide-sys/src/: bindings.rs  lib.rs
crates/verovioxide/examples/: render_abc.rs  render_all_pages.rs  render_musicxml.rs
crates/verovioxide/src/: error.rs  lib.rs  options.rs  query.rs  render.rs  toolkit.rs
crates/verovioxide/tests/: integration_test.rs
examples/: Goldberg-Variationen-1-and-2.musicxml
test-fixtures/abc/: simple.abc
test-fixtures/mei/: simple.mei
test-fixtures/musicxml/: simple.musicxml
workbench/: TODO.md
