[package]
name = "verovioxide-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bundled SMuFL fonts and resources for verovioxide"
keywords = ["mei", "music", "notation", "verovio", "smufl"]
categories = ["multimedia::encoding"]
include = [
    "src/**/*",
    "data/**/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

[features]
default = ["font-leipzig"]
font-leipzig = []
font-bravura = []
font-gootville = []
font-leland = []
font-petaluma = []
all-fonts = ["font-leipzig", "font-bravura", "font-gootville", "font-leland", "font-petaluma"]

[dependencies]
include_dir = "0.7"
tempfile = "3"
thiserror = "2"
