[package]
name = "verovioxide-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to the Verovio music engraving library"
keywords = ["mei", "music", "notation", "verovio", "ffi"]
categories = ["external-ffi-bindings"]
links = "verovio"
build = "build.rs"

[features]
default = ["bundled"]
bundled = []

[build-dependencies]
cc = "1"

[dependencies]
