[package]
name = "verovioxide-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Raw FFI bindings to the Verovio music engraving library"
keywords = ["mei", "music", "notation", "verovio", "ffi"]
categories = ["external-ffi-bindings"]
links = "verovio"
build = "build.rs"

[features]
default = ["bundled"]
# Compile Verovio C++ library from source (slower first build, but works everywhere)
bundled = []
# Download pre-built Verovio library from GitHub releases (fast, but limited platforms)
# Supported: x86_64-apple-darwin, aarch64-apple-darwin, x86_64-unknown-linux-gnu, x86_64-pc-windows-msvc
prebuilt = []
# Force a fresh recompilation of the Verovio C++ library, bypassing the cache.
# Use with: cargo build --features force-rebuild
force-rebuild = []

[build-dependencies]
cc = "1"
dunce = "1"
flate2 = "1"
sha2 = "0.10"
tar = "0.4"
ureq = "2"

[dependencies]
