[package]
name = "verovioxide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "Safe Rust bindings to the Verovio music notation engraving library"
keywords = ["mei", "music", "notation", "verovio", "musicxml"]
categories = ["multimedia::encoding", "parsing"]

[features]
default = ["bundled-data", "png"]
bundled-data = ["verovioxide-data", "tempfile"]
png = ["resvg"]

[dependencies]
verovioxide-sys = { version = "0.3.0", path = "../verovioxide-sys" }
verovioxide-data = { version = "0.3.0", path = "../verovioxide-data", optional = true }
tempfile = { version = "3", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PNG rendering (optional) - uses resvg's re-exports of usvg and tiny-skia
resvg = { version = "0.46", optional = true }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
image = "0.25"
